package com.lvl6.proto;

option java_outer_classname = "JobProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO


message BuildStructJobProto {
     optional int32 buildStructJobId = 1;
     optional int32 structId = 2;
     optional int32 quantityRequired = 3;
}

message MinimumUserBuildStructJobProto {
     optional int32 userId = 1;
     optional int32 questId = 2;
     optional int32 buildStructJobId = 3;
     optional int32 numOfStructUserHas = 4;
}

//------------------------------------------------------------------------------------------

message UpgradeStructJobProto {
     optional int32 upgradeStructJobId = 1;
     optional int32 structId = 2;
     optional int32 levelReq = 3;
}

message MinimumUserUpgradeStructJobProto {
     optional int32 userId = 1;
     optional int32 questId = 2;
     optional int32 upgradeStructJobId = 3;
     optional int32 currentLevel = 4;		//0 if not built
}

//------------------------------------------------------------------------------------------

enum MonsterJobType {
	COLLECT = 1;
	DONATE = 2;
	KILL = 3;
}

message MonsterJobProto {
	optional int32 monsterJobId = 1;
	optional int32 monsterId = 2;
	optional int32 quanity = 3;
	optional MonsterJobType monsterJobType = 4;
}